--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,9 +1,15 @@
 {% extends "base.html" %}
+
 {% block content %}
+
 <table>
     <tr valign="top">
         <td><img src="{{ user.avatar(64) }}"></td>
+
         <td>
+            {% if user.username == current_user.username %}
+                <p><a href="{{ url_for('edit_profile') }}">Edit Profile</a></p>
+            {% endif %}
             <h1>User:{{ user.username }}</h1>
             {% if user.about_me %}<p>{{ user.about_me }}</p> {% endif %}
             {% if user.last_seen %}<p>{{ user.last_seen }}</p> {% endif %}
