--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}Flasky - Page Not Found{% endblock %}
-
-{% block page_content %}
-<div class="page-header">
-    <h1>Not Found</h1>
-</div>
+{% block content %}
+    <h1>
+        File Not Found
+    </h1>
+    <p>
+        <a href="{{ url_for('index') }}">Back</a>
+    </p>
 {% endblock %}
