--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,9 +1,13 @@
 {% extends "base.html" %}
 
-{% block title %}Flasky - Internal Server Error{% endblock %}
-
-{% block page_content %}
-<div class="page-header">
-    <h1>Internal Server Error</h1>
-</div>
+{% block content %}
+    <h1>
+        An unexpected error has occurred
+    </h1>
+    <p>
+        The administrator has been notified. Sorry for the inconvenience!
+    </p>
+    <p>
+        <a href="{{ url_for('index') }}">Back</a>
+    </p>
 {% endblock %}
